--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -267,8 +267,7 @@ a.article-title:hover {
 }
 
 .author-info {
-    flex: 1;
-    text-align: center;
+    flex: 2;
 }
 
 .author-name {
@@ -277,7 +276,25 @@ a.article-title:hover {
 
 .author-profile-info {
     flex: auto;
+    flex: 1;
+    overflow: hidden;
 }
+
+.truncate-string-parent {
+    overflow: hidden;
+}
+
+.truncate-string {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/* .author-profile-info .author-email,.author-location,.author-website{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+} */
 
 #response {
     font-size: 0.9rem;
