--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -17,7 +17,7 @@
                     {% include "tags.html" with tags=post.get_tags_list %}
                 </div>
                 <div class="article-metadata">
-                    <small><a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}" title="Posts authored by {{post.author}}">{{ post.author }}</a></small>
+                    <small><a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a></small>
                     <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
                     <small class="text-muted ml-4" title={{ post.views }}>views:{{ post.views|cool_num }}</small>
                 </div>
