--- a/Blog/templates/post_featured_home.html
+++ b/Blog/templates/post_featured_home.html
@@ -2,33 +2,35 @@
 {% define 0 as flag %}
 {% url "Blog:featured-posts" as link %}
 {% include "heading.html" with heading="Featured" view_more_url=link %}
-<div class="row featured-articles">
-    {% for post in posts %}
-        {% if forloop.counter < 4 %}
-            {% if forloop.counter == 1 %}
-                {% define 8 as col %}
-                {% define 3 as font %}
-                {% define "latest" as label %}
-                {% define 1 as latest_featured %}
-            {% elif 1 < forloop.counter and forloop.counter < 4 %}
-                {% define 4 as col %}
-                {% define 6 as font %}
-                {% define "aside" as label %}
-                {% define 0 as latest_featured%}
+<div class="container-fluid">
+    <div class="row featured-articles">
+        {% for post in posts %}
+            {% if forloop.counter < 4 %}
+                {% if forloop.counter == 1 %}
+                    {% define 8 as col %}
+                    {% define 3 as font %}
+                    {% define "latest" as label %}
+                    {% define 1 as latest_featured %}
+                {% elif 1 < forloop.counter and forloop.counter < 4 %}
+                    {% define 4 as col %}
+                    {% define 6 as font %}
+                    {% define "aside" as label %}
+                    {% define 0 as latest_featured%}
+                {% endif %}
+                {% comment %} {% if forloop.counter > 1 and flag == 0 %}
+                    <div class="{{label}}">
+                {% endif %} {% endcomment %}
+                <div class="{{label}}-featured">
+                    <div class="col article-card">
+                        {% include "post_card_home.html" with font=font latest_featured=latest_featured%}
+                    </div>
+                </div>
+                {% comment %} {% if forloop.counter > 1 and flag == 0 %}
+                    </div>
+                    {% define 1 as flag %}
+                {% endif %} {% endcomment %}
             {% endif %}
-            {% comment %} {% if forloop.counter > 1 and flag == 0 %}
-                <div class="{{label}}">
-            {% endif %} {% endcomment %}
-            <div class="{{label}}-featured">
-                <div class="col article-card">
-                    {% include "post_card_home.html" with font=font latest_featured=latest_featured%}
-                </div>
-            </div>
-            {% comment %} {% if forloop.counter > 1 and flag == 0 %}
-                </div>
-                {% define 1 as flag %}
-            {% endif %} {% endcomment %}
-        {% endif %}
-    {% endfor %}
+        {% endfor %}
 
+    </div>
 </div>
