--- a/Blog/templates/post_latest_home.html
+++ b/Blog/templates/post_latest_home.html
@@ -1,16 +1,18 @@
-{% comment %} <div class="heading">
-    <legend class="latest">Latest Posts</legend>
-    <a href="{% url 'Blog:latest-posts' %}" class="btn btn-primary" role="button">View More</a>
-</div> {% endcomment %}
-{% url 'Blog:latest-posts' as link %}
-{% include 'heading.html' with heading='Latest Posts' view_more_url=link %}
+{% if recommend %}
+    {% include 'heading.html' with heading='Other Articles to read' %}
+{% else %}
+    {% url 'Blog:latest-posts' as link %}
+    {% include 'heading.html' with heading='Latest Posts' view_more_url=link %}
+{% endif %}
+<div class="container-fluid">
+    <div class="row latest-articles">
 
-<div class="row latest-articles">
+        {% for post in posts %}
+        {% comment %} label is used for displaying featured articles and is used inside 'post_featured_home.html' {% endcomment %}
+        <div class="{{label}} article-card col-md-4 col-sm-12">
+            {% include "post_card_home.html" %}
+        </div>
+        {% endfor %}
 
-    {% for post in posts %}
-    <div class="{{label}} article-card col-md-4 col-sm-12">
-        {% include "post_card_home.html" %}
     </div>
-    {% endfor %}
-
 </div>
