--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -1,29 +1,31 @@
 {% load cool_num %}
 {% for post in posts %}
-<div class="row media content-section article-list">
-    <div class="article-thumbnail col-md-3">
-        <img src={{ post.thumbnail.url }} alt="{{post.title}}" title="{{post.title}}">
-    </div>
-    <div class="details col-md-9">
-        <div class="media-body article-contents">
-            <div class="article-details">
-                <h4><a class="article-title" href="{% url 'Blog:post-detail' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}" title="{{post.title}}">{{ post.title }}</a></h4>
-                {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
-                <div class="article-short-des" style="display:inline">
-                    {{ post.content|truncatewords_html:'50'|safe }}&nbsp;
-                    <a style="display:inline-block" href="{% url 'Blog:post-detail' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}" title="Read full article">Read more</a>
-                </div>
-                <div class="tags">
-                    {% include "tags.html" with tags=post.get_tags_list %}
-                </div>
-                <div class="article-metadata">
-                    <small><a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a></small>
-                    <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-                    <small class="text-muted ml-4" title={{ post.views }}>views:{{ post.views|cool_num }}</small>
+<div class="container-fluid">
+    <div class="row media content-section article-list">
+        <div class="article-thumbnail col-md-3">
+            <img src={{ post.thumbnail.url }} alt="{{post.title}}" title="{{post.title}}">
+        </div>
+        <div class="details col-md-9">
+            <div class="media-body article-contents">
+                <div class="article-details">
+                    <h4><a class="article-title" href="{% url 'Blog:post-detail' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}" title="{{post.title}}">{{ post.title }}</a></h4>
+                    {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
+                    <div class="article-short-des" style="display:inline">
+                        {{ post.content|truncatewords_html:'50'|safe }}&nbsp;
+                        <a style="display:inline-block" href="{% url 'Blog:post-detail' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}" title="Read full article">Read more</a>
+                    </div>
+                    <div class="tags">
+                        {% include "tags.html" with tags=post.get_tags_list %}
+                    </div>
+                    <div class="article-metadata">
+                        <small><a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a></small>
+                        <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
+                        <small class="text-muted ml-4" title={{ post.views }}>views:{{ post.views|cool_num }}</small>
+                    </div>
                 </div>
             </div>
         </div>
+    {% comment %} {% include "share.html" %} {% endcomment %}
     </div>
-{% comment %} {% include "share.html" %} {% endcomment %}
 </div>
 {% endfor %}
