--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -1,6 +1,7 @@
 {% extends "Blog/base.html" %}
 {% load static %}
-{% load cool_num %}
+{% load cool_view %}
+{% load cool_timesince %}
 {% block content %}
 <div id="article-share-container">
     <div id="share">
@@ -17,12 +18,12 @@
                     </div>
                     <div class="article-info">
                         <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a>
-                        <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-                        <small class="text-muted" title={{ post.views }}>views: {{ post.views|cool_num }}</small>
+                        <small class="text-muted mr-2" title="{{ post.date_published|date:"j M Y" }}">{{ post.date_published|cool_timesince }}</small>
+                        <small class="text-muted" title={{ post.views }}>views: {{ post.views|cool_view }}</small>
                         {% if post.author == user %}
                             <div id="post-options">
-                                <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}" title="Update">Update</a>
-                                <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}" title="Delete">Delete</a>
+                                <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Update">Update</a>
+                                <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Delete">Delete</a>
                             </div>
                         {% endif %}
                     </div>
