--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -4,7 +4,11 @@
     <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2" href="#" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a>
-            <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
+            {% if post.publish %}
+            <small class="text-muted" title="{{ post.date_posted|date:"j M Y" }}">{{ post.date_posted|cool_timesince }}</small>
+            {% else %}
+            <small class="text-muted">Just now</small>
+            {% endif %}
         </div>
         <h2 class="article-title">{{ post.title }}</a></h2>
         <p class="article-content">{{ post.content|safe }}</p>
@@ -14,7 +18,7 @@
 <form method="post">
     {% csrf_token %}
     <div class="form-group">
-        <a class="btn btn-outline-info" href="{% url 'Blog:post-update' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}" title="Get back to edit">Get back to edit</a>
+        <a class="btn btn-outline-info" href="{% url 'Blog:post-update' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Get back to edit">Get back to edit</a>
         {% comment %} <button class="btn btn-outline-info ml-2" type="submit">Submit for review</button> {% endcomment %}
     </div>
 </form>
