--- a/Blog/templates/post_card_home.html
+++ b/Blog/templates/post_card_home.html
@@ -1,4 +1,5 @@
-{% load cool_num %}
+{% load cool_view %}
+{% load cool_timesince %}
 <div class="article-thumbnail">
 {% if latest_featured == 1 %}
     <img src="{{post.image.url}}" alt="{{post.title}}" title="{{post.title}}">
@@ -7,10 +8,10 @@
 {% endif %}
 </div>
 <div class="col article-container">
-    <h{{font|default:6}}><a class="article-title" href="{% url 'Blog:post-detail' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}" title="{{post.title}}">{{ post.title|truncatechars:'80' }}</a></h{{font|default:6}}>
+    <h{{font|default:6}}><a class="article-title" href="{% url 'Blog:post-detail' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="{{post.title}}">{{ post.title|truncatechars:'80' }}</a></h{{font|default:6}}>
 </div>
 <div class="article-metadata">
     <small class="text"><a class="mr-1" href="{% url 'Blog:user-posts' post.author.username %}" title="{{post.author.get_full_name|title|truncatechars:'30'}}">{{ post.author.get_full_name }}</a></small>
-    <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-    <small class="text-muted ml-2" title={{post.views}}>views:{{post.views|cool_num}}</small>
+    <small class="mr-1 text-muted" title="{{ post.date_published|date:"j M Y" }}">{{ post.date_published|cool_timesince }}</small>
+    <small class="ml-1 text-muted" title={{post.views}}>views:{{post.views|cool_view}}</small>
 </div>
