font-family for body added

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -2,6 +2,7 @@ body {
     background: #f7f7f7;
     color: #333333;
     margin-top: 5rem;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 a {
