--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -2,4 +2,32 @@
 {% block content %}
     
     <h1>About</h1>
+
+<article class="about m-2">
+    <p>
+        <a href="{% url 'Blog:home' %}" title="HackAdda Home">HackAdda</a> is an online blog that aims to increase the technical awareness around the world. We bring you the latest developments in the field of
+         <a href="{% url 'Blog:categorised' 'science'%}" title="Article under the category Science">Science</a>,
+         <a href="{% url 'Blog:categorised' 'programming'%}" title="Article under the category Programming">Programming</a>,
+         <a href="{% url 'Blog:categorised' 'robotics'%}" title="Article under the category Robotics">Robotics</a>,
+         <a href="{% url 'Blog:categorised' 'artificial-intelligence'%}" title="Article under the category Artificial Intelligence">Artificial Intelligence,
+         <a href="{% url 'Blog:categorised' 'augumented-reality'%}" title="Article under the category Augumented Reality">Augmented Reality</a>, 
+         <a href="{% url 'Blog:categorised' 'games'%}" title="Article under the category Games">Games</a>, 
+         and many more. Most articles will fall under the real of  <a href="some hackadda articles about STEAM" title="Science, Technology, Engineering, Arts and Mathematics">STEAM</a>(Science, Technology, Engineering, Arts and Mathematics).
+    </p>
+
+    <p>We aim to become your one-stop destination for most technology-related curiosities.</p>
+
+    <p>The <a href="{% url 'Blog:featured-posts' %}" title="Featured">featured</a> section contains the editors pick for our readers. They can explore <a href="#trending-posts" title="Trending articles">trending</a>, <a href="#latest-posts" title="Latest articles">latest</a> articles.</p>
+
+    <p>There are different <a href="{% url 'Blog:all-categories' %}" title="all categories">categories</a> to explore. There are <a href="{% url 'Blog:tagged' 'cheatsheet' %}" title="cheatsheets">cheatsheets</a> on various tools, tutorial series for various concepts, advice for following best practices while developing different open source softwares, web applications, tools, cross-platform software, etc. Each article has a category along with a couple of <a href="{% url 'Blog:all-tags' %}" title="Tag cloud">tags</a>.</p>
+
+    <p>We also have a section dedicated for <a href="{% url 'Blog:categorised' 'kids' %}" title="Articles for kids">kids</a>. Since they are bound to become the leaders of tommorrow, we aim to develop their interest in the field of STEAM. The kid section looks to explore with the practices that make learning STEAM an enjoyable experience.</p>
+
+    <p>Readers may also <a href="{% url 'login' %}" title="Login">Log in</a> and bookmark their favorite articles.</p>
+
+    <p>Currently, we have not opened the forum for accepting articles from people outside our team. We would love to broaden our team of hackers. We are working on that front, till then, in case you are interested in being part of our team, you may apply along with your application to emailaddress@hackadda.com.</p>
+
+    <p>We look forwarding to hearing from you.</p>
+</article>
+
 {% endblock content %}
