--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -1,7 +1,5 @@
 {% extends "Blog/base.html" %}
-{% load static %}
 {% load cool_view %}
-{% load cool_timesince %}
 {% block content %}
 <div id="article-share-container">
     <div id="share">
@@ -18,7 +16,7 @@
                     </div>
                     <div class="article-info">
                         <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a>
-                        <small class="text-muted mr-2" title="{{ post.date_published|date:"j M Y" }}">{{ post.date_published|cool_timesince }}</small>
+                        <small class="text-muted mr-2" title="{{ post.date_published }}">{{ post.date_published|date:"j M Y" }}</small>
                         <small class="text-muted" title={{ post.views }}>views: {{ post.views|cool_view }}</small>
                         {% if post.author == user %}
                             <div id="post-options">
