--- a/Blog/templates/Blog/post_form.html
+++ b/Blog/templates/Blog/post_form.html
@@ -1,11 +1,13 @@
-{% extends "Blog/base.html" %} {% load crispy_forms_tags %} {% block content %}
+{% extends "Blog/base.html" %}
+{% block content %}
 
 <div class="content-section">
     <form method="post">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Blog Post</legend>
-            {{ form|crispy }}
+            {{ form.media }}
+            {{ form.as_p }}
         </fieldset>
         <div class="form-group">
             {% comment %} <button class="btn btn-outline-info" type="submit">Preview your post</button> {% endcomment %}
