* Replace Top Tags with Popular Tags * Replace Top Categories with Popular Tags * Popular is more specific, Top is a bit vague

--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -116,8 +116,8 @@
                                 <li id="latest-posts" class="tab-pane fade" role="tabpanel" aria-labelledby="latest-posts-tab" data-url='{% url "Blog:latest-posts" %}'></li>
                                 <li id="trending-posts" class="tab-pane fade show active" role="tabpanel" aria-labelledby="trending-posts-tab" data-url='{% url "Blog:trending-posts" %}'></li>
                             </div>
-                            <li id="top-tags" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-tags" %}'>Top Tags<br></li>
-                            <li id="top-categories" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-categories" %}'>Top Categories<br></li>
+                            <li id="popular-tags" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-tags" %}'>Popular Tags<br></li>
+                            <li id="popular-categories" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-categories" %}'>Popular Categories<br></li>
                         </ul>
                     </div>
                 </div>
